--- a/modern.html
+++ b/modern.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-151754271-1');
+  </script>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-  <link rel="stylesheet" type="text/css" href="css/style_modern.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- <link rel="stylesheet" type="text/css" href="css/style_modern.css"> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Modern Era of College Football</title>
 </head>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
-<div class="container">
+<div class= "dropdown">
+<button class="dropbtn">Menu</button>
   <div class="nav">
     <nav>
       <ul>
-
-
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="ff.html">Founding Fathers</a></li>
-        <li><a href="um.html">University of Michigan</a></li>
-        <li><a href="modern.html">Modern Game</a></li>
+        <li><a href="um.html">Michigan</a></li>
+        <li><a href="modern.html" class = 'active'>Modern Game</a></li>
         <li><a href="forms.html">Contact</a></li>
       </ul>
     </nav>
   </div>
+</div>
 
 <header id="main">
 <h1>The Modern Game</h1>
@@ -30,34 +42,45 @@
 </p>
 </header>
 
-<div class = "Knute Rockne">
-<img src="images/knute_rockne.jpg" alt="Knute Rockne Head Coach of Notre Dame"/>
-<p>
-  Knute Rockne was an all american-football player and coach of Notre Dame from 1918-1930. The transition to the modern era begins with him. Rockne turned Notre Dame into a national powerhouse through inoovations in media and recruiting. Rockne made sure Notre Dame was center stage at all time. Notre Dame would go play Army in Yankee Stadium, and USC in Los Angelos. He would also make sure Notre Dame's games would be broadcasted nationally every week getting the exposure he wanted for the team and university. This exposure grew the fanbase nationwide and is the reason there are more mainstream movies about Notre Dame than any other university. Lastly, Rockne turned the American Catholic school system into the most fertile recruiting soil in the country. Using these schools Notre Dame's national brand he could recruit any star players from around the country.
-</p>
+<div class='container'>
+  <div class = "knute_rockne">
+  <img src="images/knute_rockne.jpg" alt="Knute Rockne Head Coach of Notre Dame"/>
+  <h3>Knute Rockne and the rise of Notre Dame</h3>
+  <p>
+    Knute Rockne was an all american-football player and coach of Notre Dame from 1918-1930. The transition to the modern era begins with him. Rockne turned Notre Dame into a national powerhouse through inoovations in media and recruiting. Rockne made sure Notre Dame was center stage at all time. Notre Dame would go play Army in Yankee Stadium, and USC in Los Angelos. He would also make sure Notre Dame's games would be broadcasted nationally every week getting the exposure he wanted for the team and university. This exposure grew the fanbase nationwide and is the reason there are more mainstream movies about Notre Dame than any other university. Lastly, Rockne turned the American Catholic school system into the most fertile recruiting soil in the country. Using these schools Notre Dame's national brand he could recruit any star players from around the country.
+  </p>
+  </div>
+
+
+  <div class = "race">
+  <img src="images/ernie_davis.jpg" alt="Ernie Davis the first black Heismen trophy winner"/>
+  <h3>Ernie Davis Heismen Winner</h3>
+  <p>
+    Race has always played a major role in college football. Many southern schools did not allow black players on their team well in to the 1970's. The first black heismen trophy winner was Ernie Davis in 1961 who was an all american running back for Syracuse. Duffy Daughtery the coach was the head coach of Michigan State University from 1954 to 1972 and was one of the first coaches to field a completely integrated team which enabled him to lead Michigan State to two back to back national championships in 1965 and 1966.
+  </p>
+  </div>
+
+
+  <div class = "pony_express">
+  <img src="images/smu.jpg" alt="Two players from SMU during the wild west era"/>
+  <h3>Lying, Cheating and Paying The Death of a Program</h3>
+  <p>
+    In 1987 Southern Methodist University's football team recieved the Death Penalty from the NCAA for repeated recruiting violations while already on probation for similar behavior. The team had a running payroll for all their players and blantantly violated every rule and warning from the NCAA. The cheating was not limited to just SMU but most major teams and led to the downfall of the entire Southwestern Conference in 1996. Coaches in the era were willing to win at all costs and this meant paying the best players in the country to come to their school. This popularization of recruits led to the invention of the modern recruiting system with stars and millions of fans paying attention to high school stars.
+  </p>
+  <img src="images/signing_day.jpg" alt="Recruits will typically announce their commitment from a selection of hats on signing day to friends, family and the press."/>
+  </div>
+
+
+  <div class = "current_day">
+  <img src="images/nick_saban.jpg" alt="Nick Saban head coach of Alabama"/>
+  <h3>The Titans of Today</h3>
+  <p>
+    The current state of college football has been an era of superstars and lack of parity. The level of competition is getting better and better every year as athletes recieve better training, more individualized coaching and ultimately become closer to professional athletes. The last thirteen years have been dominated by Nick Saban and his University of Alabama teams winning an unmatched five national championships while playing for another four more. Clemson coached by Dabo Sweeney has risen to the occasion over the past five years to win two national championships over Alabama. Both teams continue to dominate opponents and recruit at an umatched level indicating that the balance of power will stay in their hands for the forseeable future.
+  </p>
+  </div>
 </div>
 
-
-<div class = "Race">
-<img src="images/ernie_davis.jpg" alt="Ernie Davis the first black Heismen trophy winner"/>
-<p>
-  Race has always played a major role in college football. Many southern schools did not allow black players on their team well in to the 1970's. The first black heismen trophy winner was Ernie Davis in 1961 who was an all american running back for Syracuse. Duffy Daughtery the coach was the head coach of Michigan State University from 1954 to 1972 and was one of the first coaches to field a completely integrated team which enabled him to lead Michigan State to two back to back national championships in 1965 and 1966.
-</p>
-</div>
-
-
-<div class = "Pony Express and Recruiting">
-<img src="images/smu.jpg" alt="Two players from SMU during the wild west era"/>
-<p>
-  In 1987 Southern Methodist University's football team recieved the Death Penalty from the NCAA for repeated recruiting violations while already on probation for similar behavior. The team had a running payroll for all their players and blantantly violated every rule and warning from the NCAA. The cheating was not limited to just SMU but most major teams and led to the downfall of the entire Southwestern Conference in 1996. Coaches in the era were willing to win at all costs and this meant paying the best players in the country to come to their school. This popularization of recruits led to the invention of the modern recruiting system with stars and millions of fans paying attention to high school stars.
-</p>
-<img src="images/signing_day.jpg" alt="Recruits will typically announce their commitment from a selection of hats on signing day to friends, family and the press."/>
-</div>
-
-
-<div class = "Current Day">
-<img src="images/nick_saban.jpg" alt="Nick Saban head coach of Alabama"/>
-<p>
-  The current state of college football has been an era of superstars and lack of parity. The level of competition is getting better and better every year as athletes recieve better training, more individualized coaching and ultimately become closer to professional athletes. THe last thirteen years have been dominated by Nick Saban and his University of Alabama teams winning an unmatched five national championships while playing for another four more. Clemson coached by Dabo Sweeney has risen to the occasion over the past five years to win two national championships over Alabama. Both teams continue to dominate opponents and recruit at an umatched level indicating that the balance of power will stay in their hands for the forseeable future.
-</p>
-</div>
+<footer>
+  <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
+</footer>
+</html>
