--- a/um.html
+++ b/um.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151754271-1');
+</script>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-  <link rel="stylesheet" type="text/css" href="css/style_um.css">
+
+
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- <link rel="stylesheet" type="text/css" href="css/style_um.css"> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>History of College Football at The University of Michigan</title>
+  <title>The History of College Football at The University of Michigan</title>
 </head>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
-<div class="container">
-<div class="nav">
-  <nav>
-    <ul>
-
-<!--  write what will be in the nav here -->
-
-      <li><a href="index.html">Home</a></li>
-      <li><a href="ff.html">Founding Fathers</a></li>
-      <li><a href="um.html">University of Michigan</a></li>
-      <li><a href="modern.html">Modern Game</a></li>
-      <li><a href="forms.html">Contact</a></li>
-    </ul>
-  </nav>
+<div class= "dropdown">
+<button class="dropbtn">Menu</button>
+  <div class="nav">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ff.html">Founding Fathers</a></li>
+        <li><a href="um.html" class = "active">Michigan</a></li>
+        <li><a href="modern.html">Modern Game</a></li>
+        <li><a href="forms.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 </div>
 <header id="main">
   <h1> History of College Football at the University of Michigan</h1>
@@ -30,40 +43,37 @@
     </p>
 </header>
 
+<div class = 'container'>
 <div class="james_angell">
   <img src="images/james_angell.jpg" alt="James B. Angell former President of the University of Michigan"/>
-</div>
-
-<div>
-  <h2> The Formation of the Big Ten </h2>
+  <h3>The First Athletic Conference</h3>
   <p>
-    After the establishment of football in the "West" by Michigan it swept across college campuses and games sprung at universities around the country. In fact in 1887 on the way to play Northwestrn in Chicago, the University of Michigan team decided to stop in South Bend, Indiana and tech Notre Dame how to play football thus beginning of Michigan-Notre Dame rivalry. University Presidents hated seeing this grotesque and violent sport dominate infect their campuses but ultimately could not stop it. Realizing they universities were losing control a coalition led by James B. Angell, the President of the University of Michigan, decided to form a joint conference to regulate academics and athletics between the universities. The conference was initally known as the Western Conference, and what would later be known as the Big Ten. The initial members were  the University of Michigan, the University of Chicago, the University of Illinois, the University of Minnesota, the University of Wisconsin, Northwestern University, and Purdue University.
-  </p></br>
+    After the establishment of football in the "West" by Michigan it swept across college campuses and games sprung at universities around the country. In fact in 1887 on the way to play Northwestrn in Chicago, the University of Michigan team decided to stop in South Bend, Indiana and tech Notre Dame how to play football thus beginning of Michigan-Notre Dame rivalry. University Presidents hated seeing this grotesque and violent sport dominate infect their campuses but ultimately could not stop it. Realizing they universities were losing control a coalition led by James B. Angell, the President of the University of Michigan, decided to form a joint conference to regulate academics and athletics between the universities. The conference was initally known as the Western Conference, and what would later become known as the Big Ten. The initial members were the University of Michigan, the University of Chicago, the University of Illinois, the University of Minnesota, the University of Wisconsin, Northwestern University, and Purdue University.
+  </p>
 </div>
 
 
 
-<div class = "fielding_yost_um_text">
+<div class = "yost_era">
   <img src="images/original_big_house.jpg" alt="Picture of the Big House when it was originlly built"/>
+  <h3>The Yost Era</h3>
   <p>
     In 1901 the University of Michigan's first athletic director Charles Baird hired an up and coming coach by the name of Fielding Yost. Yost accepted the job without ever visiting Ann Arbor, promptly took a train to Ann Arbor and ran up State Street and shouted to a watching reporter "Michigan will not lose a game this year!" From 1901-1904 Michigan did not lose  a game and became known as the "Point a Minute" teams that outscored their opponents by ridiculous sums. Finally, in 1905 the University of Chicago coached by Amos Alonso Stagg defeated Michigan in what came to be known as "The First Greatest Game of the Century". From 1907 - 1917 Michigan actully left the Big Ten because they banned universities from having professional coaches such as Yost. It was during these years when Michigan was banned from playing Big Ten teams that rivalries developed between Michigan State, Ohio State and Notre Dame who were all independent as well during that time. After a succesful career as head coach Yost stepped down in 1926 to focus on being the Athletic Director at Michigan. During those years Yost raised money and oversaw the construction for the first fieldhouse in the country now known as "Yost Field House", home of the Michigan Hockey Team, the nation's first intramural building and The Big House the largest football stadium in the world.
   </p>
 </div>
 
-
-
-
 <div class = "fritz_crisler">
     <img src="images/fritz_crisler.png" alt="Fritz Chrisler"/>
+    <h3>Passing of the torch: The Rise of Fritz Crisler</h3>
   <p>
     Herbert Orin "Fritz" Crisler (/ˈkraɪslər/; January 12, 1899 – August 19, 1982) was an American college football coach who is best known as "the father of two-platoon football," an innovation in which separate units of players were used for offense and defense. Crisler developed two-platoon football while serving as head coach at the University of Michigan from 1938 to 1947. He developed the system to compete agaisnt Army in 1945 in which Michigan played an admirable game yet still lost. He also coached at the University of Minnesota (1930–1931) and Princeton University (1932–1937). Before coaching, he played football at the University of Chicago under Amos Alonzo Stagg, who nicknamed him Fritz after violinist Fritz Kreisler. He also served as the Athletic Director of Michigan from 1941-1968 and is the namesake of the basketball arena on campus.
-
-    <!-- https://en.wikipedia.org/wiki/Fritz_Crisler -->
+  <!-- https://en.wikipedia.org/wiki/Fritz_Crisler -->
   </p>
 </div>
 
-<div class = "Bo Schembechler">
+<div class = "bo_schembechler">
   <img src="images/bo_schembechler.jpg" alt="Bo Schembechler"/>
+  <h3>Bo Schembechler The Michigan Man</h3>
   <p>
     Glenn Edward Schembechler, better known as Bo Schembechler, was born in Barberton, Ohio on April 21, 1929. Over the course of his life, Schembechler became one ofthe preeminent college football coaches in the United States. In 1951, Schembechler earned an undergraduate degree from Miami University in Oxford, Ohio. He then enrolled at The Ohio State University, where he earned a master's degree in 1952. He also served as a graduate assistant under OSU's football coach, Woody Hayes, in both 1952 and 1953. Upon graduating from OSU, Schembechler briefly served in the United States Army. In 1954, he accepted his first coaching position in college football, serving as an assistant coach at Presbyterian College in South Carolina. The following year, Schembechler coached freshmen students at Bowling Green University at Bowling Green, Ohio. After only holding this position for a single year, Schembechler became an assistant defensive coach under Ara Parseghian at Northwestern University in Illinois. In 1958, Schembechler returned to Ohio State as an assistant coach under Woody Hayes. Schembechler remained at Ohio State for five years. He then became the head coach at Miami University, his alma mater, in 1963. In five seasons at this institution, Schembechler won two Mid-American Conference titles and had a combined record of forty wins, seventeen losses, and three ties. Schembechler's impressive performance at Miami prompted the University of Michigan to hire him as this institution's head coach in 1968. At Michigan, Schembechler won 194 games, lost forty-eight, and tied five. His teams never finished with a losing season and won or shared thirteen Big Ten titles. Schembechler's teams also made ten Rose Bowl appearances, but unfortunately for the university, the squads only won two of those games. Schembechler also never won a national title, but his self-proclaimed goal was always to beat Ohio State and to win Big Ten titles. During Schembechler's first ten years at Michigan, he coached against his mentor Woody Hayes. Fans and sports historians refer to this period as the "Ten Year War" between Michigan and Ohio State. Hayes's and Schembechler's rivalry during this period made the OSU-Michigan game one of the greatest and most storied contests in college football. Schembechler retired from coaching at the end of the 1989 season. At this same point, Schembechler also retired as the University of Michigan's athletic director, a position that he had held since 1988.
 
@@ -72,8 +82,9 @@
 </div>
 
 
-<div class = "1997">
+<div class = "rose_bowl">
   <img src="images/charles_woodson.jpg" alt="Charles Woodson with rose in mouth"/>
+  <h3>Champions of the World 1997 Rose Bowl</h3>
   <p>
     The 1997 championship season was one of the greatest of all time at the University of Michigan. Coached by Lloyd Carr in his third season the University of Michigan would go on to a 12-0 record beating Washington State University in the Rose Bowl on January 1, 1998 to complete the perfect season. Michigan's defense was led by cornerback and Heisman Trophy-winner Charles Woodson. Woodson, who intercepted eight passes and also scored touchdowns via pass receptions, runs from scrimmage and punt return, became the first primarily defensive player to win the Heisman. Woodson and defensive end Glen Steele were both first-team selections on the 1997 College Football All-America Team. On offense, the 1997 Michigan team had neither a 1000-yard rusher nor a 500-yard receiver. Tai Streets was the leading receiver with 476 receiving yards, and Chris Howard led the team in rushing with 938 rushing yards. Quarterback Brian Griese set Michigan single-season records with 193 pass completions and 307 pass attempts. Controversey eruped on January 4th after Nebraska and their star quaterback (Current Head Coach) Scott Frost jumped the Wolverines  to claim the #1 spot and a share of the national championship recognition.
 
@@ -82,8 +93,9 @@
 </div>
 
 
-<div class = "Jim Harbaugh">
+<div class = "jim_harbaugh">
   <img src="images/jim_harbaugh.jpeg" alt="Jim Harbaugh"/>
+  <h3>The Savior: Jim Harbaugh</h3>
   <p>
     Jim Harbaugh was named the 20th coach in University of Michigan football history on Tuesday, Dec. 30, 2014. He is the sixth former Michigan football player to be named the leader of college football's winningest program.  Harbaugh is one of four Big Ten coaches to win 10-plus games in each of his first two seasons directing a conference school. He joined Fielding Yost (1901-02) as the only head coaches to collect back-to-back 10-win seasons in their first two seasons at U-M. Harbaugh is the second-fastest coach to 20 wins at Michigan, trailing only Yost; Harbaugh accomplished the feat in 24 games and Yost won the first 29 games of his U-M career before tying Minnesota (6-6) in 1903. In three of his four seasons as the Michigan head coach, Harbaugh has guided the Wolverines to 10-win seasons. U-M has appeared in a bowl game in all four seasons, including two New Year's Six Bowls with the 2017 Orange Bowl and 2018 Chick-Fil-A Peach Bowl, and two other bowls played on New Year's Day (2016 Buffalo Wild Wings Bowl; 2018 Outback Bowl).  In his first year as the Michigan head coach, Harbaugh guided the Wolverines to a 10-3 record, including a 41-7 win over No. 19 Florida in the 2016 Buffalo Wild Wings Citrus Bowl. The Wolverines posted a 10-win season for the 27th time in the 136-year history of the program and finished in the top 12 of the national polls for the first time since 2011, finishing 11th in the Amway Coaches poll and 12th in the Associated Press media poll. In 2018, U-M's season included a 10-game win streak, and the fifth-highest single-season offensive output in program history. Led by another top-3 national defense, U-M finished No. 14 in both polls and tied for first place in the Big Ten East Division. Harbaugh came to Ann Arbor after an impressive four-year run in the National Football League with the San Francisco 49ers. He led the franchise to the NFC Championship Game in each of his first three seasons, winning the George Halas Trophy as NFC champions in 2012. Harbaugh tallied a 49-22-1 overall record that included a 5-3 mark in the postseason as 49ers head coach. Harbaugh led the Niners to a 13-3 regular-season record and to the NFC Championship Game during his first season in 2011, earning the AP NFL Coach of the Year award. Prior to making the jump to the 49ers, Harbaugh established himself as a leader of young men at the college level. He turned around a Stanford program that went 1-11 prior to his arrival. The Cardinal improved each of his four seasons, culminating with a 12-1 campaign and FedEx Orange Bowl victory over Virginia Tech in 2010. Harbaugh finished his tenure at Stanford with a 29-21 overall record (.580) and 21-15 mark in Pac-10 Conference play.  In his first head coaching experience, Harbaugh led the University of San Diego to a 29-6 record during his three seasons directing the program (2004-06). In his first year, the Toreros posted a 7-4 record after winning their final five games of the season. The team proceeded to post 11-1 marks during the 2005 and 2006 seasons, claiming the Pioneer Football League championship each season. Harbaugh spent the 2002 and 2003 NFL seasons as the quarterbacks coach with the Oakland Raiders. As a collegiate player, Harbaugh was one of the most efficient passers in NCAA history. In 1985, he led the nation in pass efficiency and finished as the runner-up in 1986. His career pass efficiency rating was the NCAA's top mark for more than 12 years. Harbaugh won the Chicago Tribune Big Ten Most Valuable Player award, earned first team All-America honors and finished third in the balloting for the Heisman Trophy following the 1986 season. He completed 387-of-620 passes for 5,449 yards and 31 touchdowns during his career, with all four statistical categories still listing among the top 12 in school history. He also added 12 rushing touchdowns during his career, including eight scores as a senior. Harbaugh became the first Michigan quarterback to ever throw for more than 300 yards in a single game (310 vs. Wisconsin) and eclipsed the 200-yard passing mark 12 times. He led the Wolverines to a 21-3-1 record as a full-time starter during his final two seasons, including a pair of victories against rivals Michigan State and Ohio State.
 
@@ -91,4 +103,10 @@
 
   <!-- https://en.wikipedia.org/wiki/1997_Michigan_Wolverines_football_team -->
   </p>
-  <div>
+</div>
+</div>
+
+<footer>
+  <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
+</footer>
+</html>
