--- a/index.html
+++ b/index.html
@@ -1,66 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151754271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151754271-1');
+</script>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title>History of College Sports Education 212.</title>
 </head>
+
+
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
-<div class="container">
-<div class="nav">
-  <nav>
-    <ul>
 
-<!--  write what will be in the nav here -->
 
-      <li><a href="index.html">Home</a></li>
-      <li><a href="ff.html">Founding Fathers</a></li>
-      <li><a href="um.html">University of Michigan</a></li>
-      <li><a href="modern.html">Modern Game</a></li>
-      <li><a href="forms.html">Contact</a></li>
-    </ul>
-  </nav>
+<div class= "dropdown">
+<button class="dropbtn">Menu</button>
+  <div class="nav">
+    <nav>
+      <ul>
+        <li><a href="index.html" class = "active">Home</a></li>
+        <li><a href="ff.html">Founding Fathers</a></li>
+        <li><a href="um.html">Michigan</a></li>
+        <li><a href="modern.html">Modern Game</a></li>
+        <li><a href="forms.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 </div>
+
+<!-- Do I want Icons -->
+<!-- <i class="material-icons">sports_football</i> -->
+
+
 <header id="main">
-<h1>History of College Football Education 212</h1>
-<p>This course will explain how football became a public spectacle at the University of
-Michigan and other campuses. In the process, it will develop the central theme that the
-marriage between university academics and big-time athletics was not inevitable, but it
-has thrived anyway, due to the efforts of a few fascinating personalities at a few crucial
-junctures.</p>
+  <h1>History of College Football Education 212</h1>
+  <p>This course will explain how football became a public spectacle at the University of
+  Michigan and other campuses. In the process, it will develop the central theme that the
+  marriage between university academics and big-time athletics was not inevitable, but it
+  has thrived anyway, due to the efforts of a few fascinating personalities at a few crucial
+  junctures.</p>
 <!-- From John Bacon's Syllabus -->
 </header>
-<div class="nw_ordinance">
-  <img src="images/nw_ordinance.jpg" alt="A picture of the Northwest Ordinance signed by Thomas Jefferson"/>
-</div>
-<div class="northwest ordinance text-block">
+  <div class='container'>
+    <body>
+      <div class="nw_ordinance">
+      <h2>The Northwest Ordinance</h2>
+      <img src="images/nw_ordinance.jpg" alt="A picture of the Northwest Ordinance signed by Thomas Jefferson"/>
+      <p>
+      The Northwest Ordinance was signed in 1787 by Thomas Jefferson. Regarding education it stated "Religion, morality and knowledge being necessary to good government and the happiness of mankind, schools and the means of education shall forever be encouraged." Additionaly, the Land Ordinance of 1785 set aside 1/16th of all land for public schools. These two acts combined paved the way for the American university system which ultimtatly allowed for the creation of college football.
+      </p>
+    </div>
 
   <!-- # Do I want intrapage links? -->
 
   <!-- <a name="about"></a> -->
-<h2>The Northwest Ordinance</h2>
-  <p>
-    The Northwest Ordinance was signed in 1787 by Thomas Jefferson. Regarding education it stated "Religion, morality and knowledge being necessary to good government and the happiness of mankind, schools and the means of education shall forever be encouraged." Additionaly, the Land Ordinance of 1785 set aside 1/16th of all land for public schools. These two acts combined paved the way for the American university system which ultimtatly allowed for the creation of college football.
-  </p>
-</div>
-<div class="firstgame">
-  <img src="images/firstgame.png" alt="college football's first game"/>
-</div>
-<div class="first game text-block">
 
-  <!-- # Do I want intrapage links? -->
 
-  <!-- <a name="about"></a> -->
-  <h2>The First College Football Game</h2>
-  <p>
-    On November 6, 1869, Rutgers University faced Princeton University (then known as the College of New Jersey) in the first-ever game of intercollegiate football that resembled more the game of soccer than "football" as it is played today. It was played with a round ball and, like all early games, used a set of rules suggested by Rutgers captain William J. Leggett, based on The Football Association's first set of rules, which were an early attempt by the former pupils of England's public schools, to unify the rules of their public schools games and create a universal and standardized set of rules for the game of football and bore little resemblance to the American game which would be developed in the following decades. It is still usually regarded as the first game of college football. The game was played at a Rutgers field. Two teams of 25 players attempted to score by kicking the ball into the opposing team's goal. Throwing or carrying the ball was not allowed, but there was plenty of physical contact between players. The first team to reach six goals was declared the winner. Rutgers won by a score of six to four. This was the last time Rutgers was ranked 1 in the country as the teams played next week at Princeton and Rutgers lost.
-    <!-- https://en.wikipedia.org/wiki/College_football#American_college_football -->
-  </p>
-</div>
+    <div class="firstgame">
 
-<div class = "fielding_yost_um_text">
+    <h2>The First College Football Game</h2>
+    <img src="images/firstgame.png" alt="college football's first game"/>
+    <p>
+      On November 6, 1869, Rutgers University faced Princeton University (then known as the College of New Jersey) in the first-ever game of intercollegiate football that resembled more the game of soccer than "football" as it is played today. It was played with a round ball and, like all early games, used a set of rules suggested by Rutgers captain William J. Leggett, based on The Football Association's first set of rules, which were an early attempt by the former pupils of England's public schools, to unify the rules of their public schools games and create a universal and standardized set of rules for the game of football and bore little resemblance to the American game which would be developed in the following decades. It is still usually regarded as the first game of college football. The game was played at a Rutgers field. Two teams of 25 players attempted to score by kicking the ball into the opposing team's goal. Throwing or carrying the ball was not allowed, but there was plenty of physical contact between players. The first team to reach six goals was declared the winner. Rutgers won by a score of six to four. This was the last time Rutgers was ranked 1 in the country as the teams played next week at Princeton and Rutgers lost.
+      <!-- https://en.wikipedia.org/wiki/College_football#American_college_football -->
+    </p>
+    </div>
+    </body>
+  </div>
+
+<footer>
   <p>
-    In 1901 the University of Michigan's first athletic director Charles Baird hired an up and coming coach by the name of Fielding Yost. Yost accepted the job without ever visiting Ann Arbor, promptly took a train to Ann Arbor and ran up State Street and shouted to a watching reporter "Michigan will not lose a game this year!" From 1901-1904 Michigan did not lose  a game and became known as the "Point a Minute" teams that outscored their opponents by ridiculous sums. Finally, in 1905 the University of Chicago coached by Amos Alonso Stagg defeated Michigan in what came to be known as "The First Greatest Game of the Century". From 1907 - 1917 Michigan actully left the Big Ten because they banned universities from having professional coaches such as Yost. It was during these years when Michigan was banned from playing Big Ten teams that rivalries developed between Michigan State, Ohio State and Notre Dame who were all independent as well during that time. After a succesful career as head coach Yost stepped down in 1926 to focus on being the Athletic Director at Michigan. During those years Yost raised money and oversaw the construction for the first fieldhouse in the country now known as "Yost Field House", home of the Michigan Hockey Team, the nation's first intramural building and The Big House the largest football stadium in the world.
+    This page was produced by Daniel Eilender. Please contact me @ danlouis@umich.education<br>
   </p>
+</footer>
+
+</html>
