--- a/forms.html
+++ b/forms.html
@@ -20,11 +20,11 @@
   <div class="nav">
     <nav>
       <ul>
-        <li><a href="index.html" class = "active">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="ff.html">Founding Fathers</a></li>
         <li><a href="um.html">Michigan</a></li>
         <li><a href="modern.html">Modern Game</a></li>
-        <li><a href="forms.html">Contact</a></li>
+        <li><a href="forms.html" class ='active'>Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -38,13 +38,12 @@
 
   <header>Contact</header>
 
-<form id="form" class="https://formspree.io/danlouis@umich.edu" action="" method ="post">
+<form id="form"  action="https://formspree.io/moqqvybk" method ="POST">
 
     <input id="name" type="text" placeholder="NAME">
     <input id="email" type="text" placeholder="E-MAIL">
     <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
 <input id="submit" type="submit" value="GO!">
-
 </form>
 
 
@@ -69,4 +68,7 @@
 	</fieldset>
 </form> -->
 </body>
+<footer>
+  <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
+</footer>
 </html>
