--- a/forms.html
+++ b/forms.html
@@ -33,17 +33,14 @@
 <body>
 
 
-  <!-- <form class="https://formspree.io/danlouis@umich.edu" action="" method="post"> -->
-
-
   <header>Contact</header>
 
 <form id="form"  action="https://formspree.io/moqqvybk" method ="POST">
 
-    <input id="name" type="text" placeholder="NAME">
-    <input id="email" type="text" placeholder="E-MAIL">
-    <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
-<input id="submit" type="submit" value="GO!">
+    <input id="name" type="text" placeholder="NAME" name = 'name'>
+    <input id="email" type="text" placeholder="E-MAIL" name="_replyto">
+    <textarea id="message" type="text" placeholder="MESSAGE" name='message'></textarea>
+<input id="submit" type="submit" value="Send">
 </form>
 
 
