--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
   gtag('config', 'UA-151754271-1');
 </script>
+
+
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
   <title>History of College Sports Education 212.</title>
 </head>
 
@@ -42,7 +45,12 @@
 
 
 <header id="main">
-  <h1>History of College Football Education 212</h1>
+  <h1 class= 'titles'>History of College Football Education 212</h1><br>
+  <h2>Taught by Professor John Bacon<h2>
+
+  <h3> Mon & Wed 8:30-10 Fall 2019</h3><br>
+
+
   <p>This course will explain how football became a public spectacle at the University of
   Michigan and other campuses. In the process, it will develop the central theme that the
   marriage between university academics and big-time athletics was not inevitable, but it
@@ -50,36 +58,38 @@
   junctures.</p>
 <!-- From John Bacon's Syllabus -->
 </header>
-  <div class='container'>
-    <body>
-      <div class="nw_ordinance">
-      <h2>The Northwest Ordinance</h2>
-      <img src="images/nw_ordinance.jpg" alt="A picture of the Northwest Ordinance signed by Thomas Jefferson"/>
-      <p>
-      The Northwest Ordinance was signed in 1787 by Thomas Jefferson. Regarding education it stated "Religion, morality and knowledge being necessary to good government and the happiness of mankind, schools and the means of education shall forever be encouraged." Additionaly, the Land Ordinance of 1785 set aside 1/16th of all land for public schools. These two acts combined paved the way for the American university system which ultimtatly allowed for the creation of college football.
-      </p>
+<body>
+
+<h3>Topics in this course include: </h3>
+<li><p> The Oxbridge Model shit to the American System</p></li>
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/john_bacon.jpg" alt="John Bacon" style="width:300px;height:300px;">
     </div>
-
-  <!-- # Do I want intrapage links? -->
-
-  <!-- <a name="about"></a> -->
-
-
-    <div class="firstgame">
-
-    <h2>The First College Football Game</h2>
-    <img src="images/firstgame.png" alt="college football's first game"/>
-    <p>
-      On November 6, 1869, Rutgers University faced Princeton University (then known as the College of New Jersey) in the first-ever game of intercollegiate football that resembled more the game of soccer than "football" as it is played today. It was played with a round ball and, like all early games, used a set of rules suggested by Rutgers captain William J. Leggett, based on The Football Association's first set of rules, which were an early attempt by the former pupils of England's public schools, to unify the rules of their public schools games and create a universal and standardized set of rules for the game of football and bore little resemblance to the American game which would be developed in the following decades. It is still usually regarded as the first game of college football. The game was played at a Rutgers field. Two teams of 25 players attempted to score by kicking the ball into the opposing team's goal. Throwing or carrying the ball was not allowed, but there was plenty of physical contact between players. The first team to reach six goals was declared the winner. Rutgers won by a score of six to four. This was the last time Rutgers was ranked 1 in the country as the teams played next week at Princeton and Rutgers lost.
-      <!-- https://en.wikipedia.org/wiki/College_football#American_college_football -->
-    </p>
+    <div class="flip-card-back">
+      <h1>John Bacon</h1>
+      <p>Professor of Sports Histroy at the University of Michigan</p>
+      <p>3x New York Times Best Seller</p>
     </div>
-    </body>
   </div>
+</div>
+<!-- <div class='icons'><i class="material-icons">sports_football</i> <i class="material-icons">school</i>
+<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
+<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
+<i class="material-icons">sports_football</i> <i class="material-icons">school</i>
+<i class="material-icons">sports_football</i> <i class="material-icons">school</i></div> -->
 
+
+
+
+
+
+</body>
 <footer>
   <p>
-    This page was produced by Daniel Eilender. Please contact me @ danlouis@umich.education<br>
+    This page was produced by Daniel Eilender. <br> Please contact me @ danlouis@umich.edu<br>
   </p>
 </footer>
 
