--- a/modern.html
+++ b/modern.html
@@ -13,11 +13,9 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
-  <!-- <link rel="stylesheet" type="text/css" href="css/style_modern.css"> -->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Modern Era of College Football</title>
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
+  <title> The Modern Era of College Football</title>
 </head>
 <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
@@ -36,13 +34,14 @@
 </div>
 
 <header id="main">
-<h1>The Modern Game</h1>
+<h1 class = 'titles'>The Modern Game</h1>
 <p>
-  Modern College Football is a multi-billion dollar industry that fills stadiums around the country with millions of fans every Saturday in the fall. Millons more watch games on tv and puchase college apparel. College football is the lifeblood of universities as it motivates students to attend certain schools an is the thread that connects alumni back to campus. No other country in the world has a system such as college sports it is uniquely American.
+  Modern College Football is a multi-billion dollar industry that fills stadiums around the country with millions of fans every Saturday in the fall. College football is the lifeblood of universities as it motivates students to attend certain schools an is the thread that connects alumni back to campus. No other country in the world has a system such as college sports it is uniquely American.
 </p>
 </header>
 
 <div class='container'>
+  <!-- <div class='flex_container'> -->
   <div class = "knute_rockne">
   <img src="images/knute_rockne.jpg" alt="Knute Rockne Head Coach of Notre Dame"/>
   <h3>Knute Rockne and the rise of Notre Dame</h3>
@@ -55,9 +54,7 @@
   <div class = "race">
   <img src="images/ernie_davis.jpg" alt="Ernie Davis the first black Heismen trophy winner"/>
   <h3>Ernie Davis Heismen Winner</h3>
-  <p>
-    Race has always played a major role in college football. Many southern schools did not allow black players on their team well in to the 1970's. The first black heismen trophy winner was Ernie Davis in 1961 who was an all american running back for Syracuse. Duffy Daughtery the coach was the head coach of Michigan State University from 1954 to 1972 and was one of the first coaches to field a completely integrated team which enabled him to lead Michigan State to two back to back national championships in 1965 and 1966.
-  </p>
+  <p>Race has always played a major role in college football. Many southern schools did not allow black players on their team well in to the 1970's. The first black heismen trophy winner was Ernie Davis in 1961 who was an all american running back for Syracuse. Duffy Daughtery the coach was the head coach of Michigan State University from 1954 to 1972 and was one of the first coaches to field a completely integrated team which enabled him to lead Michigan State to two back to back national championships in 1965 and 1966.</p>
   </div>
 
 
@@ -67,7 +64,6 @@
   <p>
     In 1987 Southern Methodist University's football team recieved the Death Penalty from the NCAA for repeated recruiting violations while already on probation for similar behavior. The team had a running payroll for all their players and blantantly violated every rule and warning from the NCAA. The cheating was not limited to just SMU but most major teams and led to the downfall of the entire Southwestern Conference in 1996. Coaches in the era were willing to win at all costs and this meant paying the best players in the country to come to their school. This popularization of recruits led to the invention of the modern recruiting system with stars and millions of fans paying attention to high school stars.
   </p>
-  <img src="images/signing_day.jpg" alt="Recruits will typically announce their commitment from a selection of hats on signing day to friends, family and the press."/>
   </div>
 
 
@@ -78,9 +74,10 @@
     The current state of college football has been an era of superstars and lack of parity. The level of competition is getting better and better every year as athletes recieve better training, more individualized coaching and ultimately become closer to professional athletes. The last thirteen years have been dominated by Nick Saban and his University of Alabama teams winning an unmatched five national championships while playing for another four more. Clemson coached by Dabo Sweeney has risen to the occasion over the past five years to win two national championships over Alabama. Both teams continue to dominate opponents and recruit at an umatched level indicating that the balance of power will stay in their hands for the forseeable future.
   </p>
   </div>
+<!-- </div> -->
 </div>
 
 <footer>
-  <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
+  <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
 </html>
