--- a/ff.html
+++ b/ff.html
@@ -11,14 +11,13 @@
   gtag('config', 'UA-151754271-1');
 </script>
   <meta charset="utf-8">
-
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
   <title>The Founding Fathers of American College Football</title>
 </head>
-<!-- <div class="skip"><a href="#main">Skip to Main Content</a></div> -->
-<!-- <div class="nav_container"> -->
+<div class="skip"><a href="#main">Skip to Main Content</a></div>
 <div class= "dropdown">
 <button class="dropbtn">Menu</button>
   <div class="nav">
@@ -34,7 +33,7 @@
   </div>
 </div>
 <header id="main">
-<h1>Founding Fathers of American College Football.</h1>
+<h1 class = 'titles'>Founding Fathers of American College Football.</h1>
   <p>
   College football began Novemeber 6, 1869. Over the course of the next sixty years many people were able to influence the future of the sports. The most notable
   of these are known at the founding fathers. The founding fathers of football consist of: Walter Camp, Pop Warner, Fielding Yost, John Heismen, Amos Alonso Stagg and Knute Rockne. The biographies and
@@ -92,7 +91,7 @@
 </div>
 
 <footer>
-  <p>This page was produced by Daniel Eilender.<br> Please contact me @ danlouis@umich.edu</p>
+  <p>This page was produced by Daniel Eilender<br> Please contact me @ danlouis@umich.edu</p>
 </footer>
 
 </html>
