--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Open+Sans&display=swap" rel="stylesheet">
-  <title>History of College Sports Education 212.</title>
+  <title>History of College Athletics</title>
 </head>
 
 
@@ -45,10 +45,11 @@
 
 
 <header id="main">
-  <h1 class= 'titles'>History of College Football Education 212</h1><br>
+  <h1 class= 'titles'>History of College Athletics</h1><br>
+  <div class = 'typewriter'>
   <h2>Taught by Professor John Bacon<h2>
 
-  <h3> Mon & Wed 8:30-10 Fall 2019</h3><br>
+  <h3> Mon & Wed 8:30-10 Fall 2019 (EDUC 212)</h3><br>
 
 
   <p>This course will explain how football became a public spectacle at the University of
@@ -56,12 +57,20 @@
   marriage between university academics and big-time athletics was not inevitable, but it
   has thrived anyway, due to the efforts of a few fascinating personalities at a few crucial
   junctures.</p>
+</div>
 <!-- From John Bacon's Syllabus -->
 </header>
 <body>
-
 <h3>Topics in this course include: </h3>
-<li><p> The Oxbridge Model shit to the American System</p></li>
+<div class = "course_topics">
+<ul>
+  <li>Impact of the Northwest Ordinance</li>
+  <li>American Exceptionalism</li>
+  <li>The Athletics and Academics Marriage</li>
+  <li>The Bacon Grand Unified Theory of College Athletics</li>
+  <li>The History of Boxencuben "The Big Brother of Basketball"</li>
+</ul>
+</div>
 
 <div class="flip-card">
   <div class="flip-card-inner">
