--- a/um.html
+++ b/um.html
@@ -33,7 +33,7 @@
   </div>
 </div>
 <header id="main">
-  <h1> History of College Football at the University of Michigan</h1>
+  <h1 class='titles'> History of College Football at the University of Michigan</h1>
     <p>
       On May 30, 1879, Michigan played its first intercollegiate football game against Racine College at White Stocking Park in Chicago. The Chicago Tribune called it "the first rugby-football game to be played west of the Alleghenies." The final score was 1-0 Wolverines.
     </p>
